# c-libs

./: .clang-format  .gitignore  CMakeLists.txt
src/: Array.c  Array.h  BasicTypes.h  Color.c  Color.h  GenericAllocator.c  GenericAllocator.h  Rasterizer.c  Rasterizer.h  String.c  String.h  main.c
